--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,11 @@
 site_name: My Docs
 
+#theme:
+#  name: material
+
 theme:
-  name: material
+  name: mkdocs
+  highlightjs: true
+  hljs_languages:
+    - yaml
+    - rust
